# xdynamo

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  versions.json
0.10.2/: index.html
0.10.2/api/xdynamo/: client.html  const.html  fields.html  index.html  model.html  structure.html
0.10.2/changelog/: index.html
0.10.2/search/: search_index.json
0.10.3/: index.html
0.10.3/api/xdynamo/: api.html  model.html  resources.html
0.10.3/changelog/: index.html
0.10.3/search/: search_index.json
0.10.4/: 404.html  index.html  objects.inv
0.10.4/api/xdynamo/: common_types.html  db.html  errors.html  index.html  utils.html
0.10.4/changelog/: index.html
0.10.4/search/: search_index.json
tests/: test_dynamo.py
xdynamo/: __init__.py  client.py  common_types.py  db.py  model.py
